--- a/zbase/build.gradle
+++ b/zbase/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     api project(path: ':latticeview')
-
+    api project(path: ':xnet')
     api 'io.github.youth5201314:banner:2.2.2'
     implementation 'com.tencent:mmkv-static:1.2.12'
 
