--- a/zbase/build.gradle
+++ b/zbase/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     api 'com.alibaba.android:vlayout:1.3.0@aar'
-    implementation 'com.lzy.net:okgo:3.0.4'
-    implementation 'com.lzy.net:okserver:2.0.5'
+//    implementation 'com.lzy.net:okgo:3.0.4'
+//    implementation 'com.lzy.net:okserver:2.0.5'
 
     api 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.core:core:1.3.2"
