--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(path: ':home')
     implementation project(path: ':zbase')
+//    implementation 'com.github.gjb-cn.basis:zbase:1.0.1'
     implementation project(path: ':user')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
