--- a/user/build.gradle
+++ b/user/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation project(path: ':zbase')
+//    implementation 'com.github.gjb-cn.basis:zbase:1.0.1'
 }
