--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.1.3'
         classpath 'com.chenenyu.router:gradle-plugin:latest.integration'
     }
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-    }
+//    repositories {
+//        google()
+//        mavenCentral()
+//        maven { url 'https://jitpack.io' }
+//    }
 }
 
 plugins {
