--- a/zbase/build.gradle
+++ b/zbase/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     api project(path: ':latticeview')
     api project(path: ':xnet')
+    implementation project(path: ':library')
+    implementation project(path: ':statusutil')
    //api 'com.github.gjb-cn.basis:xnet:1.0.1'
     api 'io.github.youth5201314:banner:2.2.2'
     implementation 'com.tencent:mmkv-static:1.2.12'
@@ -73,14 +75,15 @@ dependencies {
     implementation "androidx.core:core:1.3.2"
     //
     api "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    implementation 'com.jaeger.statusbarutil:library:1.5.1'
 
     api 'com.github.bingoogolapple:BGABanner-Android:3.0.1'
     //侧滑SwipeRecyclerView
     api 'com.yanzhenjie.recyclerview:x:1.3.2'
     // 二维码相关
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
-    implementation 'top.zibin:Luban:1.1.8'
+    //implementation 'com.jaeger.statusbarutil:library:1.5.1'
+//    implementation 'top.zibin:Luban:1.1.8'
+
    // api 'com.tencent.bugly:crashreport:4.1.9.2'
 //    api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
