--- a/xnet/build.gradle
+++ b/xnet/build.gradle
@@ -29,11 +29,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation files('libs/okgo-3.0.4.jar')
+    implementation files('libs/okserver-2.0.4.jar')
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+//    implementation files('libs/okhttp-3.8.1.jar')
+//    implementation files('libs/okhttp-3.8.1.jar')
+//
+//    implementation('com.squareup.okhttp3:okhttp:4.9.0') {
+//        exclude group: 'com.squareup.okio', module: 'okio'
+//    }
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    implementation 'com.lzy.net:okgo:3.0.4'
-    implementation 'com.lzy.net:okserver:2.0.5'
+//    implementation 'com.lzy.net:okgo:3.0.4'
+//    implementation 'com.lzy.net:okserver:2.0.5'
     implementation 'com.google.code.gson:gson:2.8.9'
 }
