--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.chenenyu.router'
+apply from:"../config.gradle"
 android {
 
     compileSdk rootProject.ext.compileSdk
@@ -34,8 +35,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation project(path: ':zbase')
-//    implementation 'com.github.gjb-cn.basis:zbase:1.0.1'
+    if (zbaseMode.isLocalMode) {
+        implementation project(path: ':zbase')
+    } else {
+        implementation 'com.github.gjb-cn.basis:zbase:' + cloudCode
+    }
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
