--- a/zbase/build.gradle
+++ b/zbase/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.chenenyu.router'
 apply from:"../config.gradle"
+def channel_name = project.hasProperty("CNAME") ? "${CNAME}" : ""
+println("---->channel_name=" + channel_name)
 android {
     compileSdk rootProject.ext.compileSdk
     namespace 'com.yft.zbase'
@@ -13,7 +15,8 @@ android {
         buildConfigField 'String', 'versionCode', "\"${rootProject.ext.versionCode}\""
         buildConfigField 'String', 'versionName', "\"${rootProject.ext.versionName}\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        def name = "".equals(channel_name) ? "C100" : channel_name
+        buildConfigField 'String', 'CNAME', "\"${name}\""
         multiDexEnabled true
     }
 
@@ -87,4 +90,5 @@ dependencies {
    // api 'com.tencent.bugly:crashreport:4.1.9.2'
 //    api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+
 }
