--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,8 @@
 ext{
     signature = [KEYSTORE_PASSWORD : "123456", KET_PASSWORD : "123456",KEY_ALIAS : "hk"]
-    userMode = [isLocalMode:false]
-    homeMode = [isLocalMode:false]
-    zbaseMode = [isLocalMode:true] // zbaseMode 如果为true, 所有mode必须全使用true 使用本地代码,不然会引发冲突 。
+    userMode = [isLocalMode : false]
+    homeMode = [isLocalMode : false]
+    zbaseMode = [isLocalMode : true]
     cloudCode = "1.1.7" // 云上的版本号
 }
 
