--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.fuan.market">
+    package="com.fuan.chameleon">
 <!--      android:allowNativeHeapPointerTagging="false"-->
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:allowNativeHeapPointerTagging="false"
-        android:name="com.fuan.market.ActionApplication"
+        android:name="com.fuan.chameleon.ActionApplication"
         android:theme="@style/Theme.YFTJoin">
 
         <provider
@@ -28,7 +28,7 @@
         </provider>
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.fuan.chameleon.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true">
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".WelcomeActivity"
+            android:name="com.fuan.chameleon.WelcomeActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true">
@@ -78,12 +78,12 @@
         </activity>
 
         <activity
-            android:name=".GuideActivity"
+            android:name="com.fuan.chameleon.GuideActivity"
             android:screenOrientation="portrait"
             android:exported="false"/>
 
         <!--    deeplink 拉起    -->
-        <activity android:name=".DeepLinkActivity"
+        <activity android:name="com.fuan.chameleon.DeepLinkActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true">
