--- a/config.gradle
+++ b/config.gradle
@@ -1,9 +1,9 @@
 ext{
     signature = [KEYSTORE_PASSWORD : "123456", KET_PASSWORD : "123456",KEY_ALIAS : "hk"]
-    userMode = [isLocalMode : false]
+    userMode = [isLocalMode : true]
     homeMode = [isLocalMode : false]
     zbaseMode = [isLocalMode : true]
-    cloudCode = "1.1.8" // 云上的版本号
+    cloudCode = "1.1.9" // 云上的版本号
 }
 
 
