--- a/zbase/build.gradle
+++ b/zbase/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.tencent:mmkv-static:1.2.12'
 
     implementation 'com.qcloud.cos:avif:1.1.3'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    api 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     api 'com.alibaba.android:vlayout:1.3.0@aar'
