--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_a"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:preserveLegacyExternalStorage="true"
         tools:replace="android:allowBackup"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_round_a"
         android:supportsRtl="true"
         android:allowNativeHeapPointerTagging="false"
         android:name="com.fuan.market.ActionApplication"
